--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=6f6684b1777bba33b3dd089619a109c6
+APP_SECRET=5c5080f995d3554fd8a6a6276b0cb36c
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
@@ -31,5 +31,5 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/numeripic
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+MAILER_URL=smtp://192.168.210.72:25
 ###< symfony/swiftmailer-bundle ###
