--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,3 +35,6 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path '^/app_logout$', roles: ROLE_USER}
+        - { path '^/add', roles: ROLE_USER }
+
